# simple-validate

./: Cargo.toml  README.md
examples/: credentials.rs
src/validate/: mod.rs
src/validate/string/: email.rs  ends_with.rs  includes.rs  length.rs  max_length.rs  min_length.rs  mod.rs  regex.rs  starts_with.rs
tests/: string.rs
